# tebako-bootstrap

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml
include/tebako/: VENDORED.md  tpkg.h
src/: tebako-bootstrap.c
test/: fake-runtime.c  self-test.sh
tools/: tpkg-stitch.c
